--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+Changes from version 1.0.2 to 1.0.3:
+  * Fixed a bug which made pure MA models to throw an error.
+
 Changes from version 1.0.1 to 1.0.2:
   * Corrected citations.
 
