--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Changes from version 1.0.2 to 1.0.3:
   * Fixed a bug which made pure MA models to throw an error.
-
+  * Fixed issue with try-error due to upcoming changes in R4.0.0.
+  
 Changes from version 1.0.1 to 1.0.2:
   * Corrected citations.
 
